--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "es6-promise": "^4.2.8",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
     "vue-audio-recorder": "^3.0.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
+    "vuex": "^3.1.2",
     "webpack": "latest"
   },
   "devDependencies": {
