--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
-    "webpack": "latest"
+    "webpack": "latest",
+    "axios": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
