server start fix

--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run build",
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "latest",
     "core-js": "^3.4.4",
     "es6-promise": "^4.2.8",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
@@ -18,8 +20,7 @@
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
-    "webpack": "latest",
-    "axios": "latest"
+    "webpack": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
