--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0",
     "webpack": "latest"
   },
   "devDependencies": {
